PROM_GRAFANA/prometheus.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-apps
  namespace: monitoring
  labels:
    kubernetes.io/cluster-service: "true"
    prometheus: apps
spec:
  ports:
    - name: web
      protocol: TCP
      port: 9090
      targetPort: web
  selector:
    app: prometheus
    prometheus: apps
