PROM_GRAFANA/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.portail-dev.cdg.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
